production/api-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: applicationprocess-dep
spec:
  selector:
    matchLabels:
      app: applicationprocess
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: applicationprocess
        tier: frontend
    spec:
      containers:
        - name: application-process
          image: codeyourfuture/application-process
          resources:
            limits:
              cpu: 150m
              memory: 128M
            requests:
              cpu: 60m
              memory: 128M
          ports:
            - containerPort: 3000
